fix header width + gap between accomodations on homepage

--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 223px !important;
     margin: auto;
     align-items: center;
     height: 500px;
