--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -2,7 +2,7 @@
   .gallery {
     display: flex;
     justify-content: center;
-    gap: 60px 50px;
+    gap: 60px 70px;
     width: 100%;
     margin: auto;
     margin-top: 40px;
