--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,6 @@
 @media all {
   header {
-    width: 86.11%;
+    width: 80%;
     margin: auto;
     display: flex;
     justify-content: space-between;
