--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 main {
-  width: 86.11%;
+  width: 80%;
   margin: auto;
   padding-bottom: 20px;
   margin-bottom: 20px;
